--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "12.13.1"
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
